# RNHostV2

./: .clang-format  build.gradle  settings.gradle
app/: build.gradle  (+1 more)
app/src/main/cpp/: AssetJSBundle_Android.cpp  AssetJSBundle_Android.h  AwesomeRekaService.cpp  AwesomeRekaService.h  BundleServerJSBundle.h  CMakeLists.txt  IReactInstanceInternal.h  InstanceFactory.h  InstanceFactory_Android.cpp  JReactInstance.cpp  JReactInstance.h  JReactOptions.cpp  JReactOptions.h  JReactViewInstance.cpp  JReactViewInstance.h  JReactViewOptions.cpp  JReactViewOptions.h  JSBundle.cpp  JSBundle_Android.cpp  MainActivity.cpp  MainActivity.h  MsoUtils.cpp  ORNHostHeadlessFragment.cpp  ORNHostHeadlessFragment.h  ORNHostKtNativeOptionsFragment.cpp  ORNHostKtNativeOptionsFragment.h  OnLoad.cpp  React.h  ReactHost.cpp  ReactHost.h  ReactInstanceAndroid.cpp  ReactInstanceAndroid.h  mso.txt  native-lib.cpp  precomp.h
app/src/main/cpp/ReactNativeHost/: JSBundle.h  React.h
app/src/main/cpp/reka/: AwesomeRekaDefs.g.h
fbjni/src/main/cpp/: CMakeLists.txt
headless/src/main/cpp/: CMakeLists.txt  JSHeadlessRuntime.h  JSHeadlessRuntimeImpl.cpp  JSHeadlessRuntimeImpl.h  headless.cpp
headless/src/main/cpp/jshostheadless/: JSHeadlessRuntime.h
json/src/main/cpp/: CMakeLists.txt  Notes.txt  jsonStorage.cpp  jsonStorage.h  jsonWriter.cpp  precomp.h  stubs.cpp
json/src/main/cpp/core_root/: msostringTraits.h  msostringUtils.h
json/src/main/cpp/json/: IByteStreamOutput.h.bak  IJsonReader.h  IStreamOutput.h.bak  JsonGuid.h.bak
json/src/main/cpp/stlextensions/: array_view.h  string_adapter.h
json/src/main/cpp/stringcore/: cloning.h  codePages.h  comparison.h  localeSupport_android.cpp  parsing.h  stringApiFlags.h  stringComparison.cpp  stringConversion.cpp  stringParsing.cpp  stringTraits.cpp  stringUtils.cpp  surrogatePairSupport.h  unicodeSubranges.h
json/src/main/cpp/wchar16/: wc16.h  wc16_wregex.h
mso/src/main/cpp/: CMakeLists.txt
mso20android/src/main/cpp/: CMakeLists.txt  stub.cpp
mso20android/src/main/cpp/core_root/: msostringConversion.h
mso20android/src/main/cpp/json/: IJsonStorage.h  IJsonWriter.h  StringOutput.h  Structured.h
mso20android/src/main/cpp/json_src/: JsonGuid.cpp.bak  jsonInput.h  jsonReader.cpp  jsonReader.h  jsonWriter.h  sal.h  stringrefoutput.h  stubs.h  writer.cpp  writer.h
mso20android/src/main/cpp/reka/: JsonReader.h  PropertyBag.h  RekaApi.h  RekaServiceRegistration.h  RekaWriter.h
mso20android/src/main/cpp/reka_src/: JsonReader.cpp  JsonWriter.cpp  PropertyBag.cpp  RekaCallContext.cpp  RekaCallContext.h  RekaContext.h  RekaContextProxy.cpp  RekaInstance.cpp  RekaInstance.h  RekaQueueService.cpp  RekaQueueService.h  RekaServiceProviderRegistration.cpp  RekaServiceProviderRegistration.h  RekaWriter.cpp  StringConversion.cpp  reka.cpp
mso20android/src/main/cpp/stlextensions/: string_adapter.h
mso20android/src/main/cpp/stringcore/: insetof.h  stringConvertData.h  stringUtils.cpp
officeplat/src/main/cpp/: CMakeLists.txt  OfficeAssetApi.cpp  OfficeAssetApi.h  precomp.h  stub.cpp  stub.h  wstring_inst.cpp
officeplat/src/main/cpp/stringcore/: WideCharToUTF8Conversion.h  languageIds.h  localesupport.h  stringTraits.cpp  stringcore.h
officeplat/src/main/cpp/wchar16/: string_conversions.h  wc16_locale.h  wc16_traits.h  wc16_wstream.h  wc16_wstring.h
precomp/src/main/cpp/: CMakeLists.txt  precomp.h  stub.cpp
reacthost/src/main/cpp/: BundleServerJSBundle.cpp  CMakeLists.txt  GetRuntimeExecutor_android.cpp  GetRuntimeExecutor_android.h  InstanceFactory_Android.cpp  JErrorCode.cpp  JErrorCode.h  JInstanceCreatedCallback.cpp  JInstanceCreatedCallback.h  JInstanceLoadedCallback.cpp  JInstanceLoadedCallback.h  JJSBundle.cpp  JJSBundle.h  JMsoFuture.cpp  JMsoFuture.h  JReactContextHolder.h  JReactHost.cpp  JReactHost.h  JReactHostStatics.cpp  JReactHostStatics.h  JReactInstance.cpp  JReactInstance.h  JReactOptions.cpp  JReactOptions.h  JReactViewHost.cpp  JReactViewHost.h  JReactViewInstance.cpp  JReactViewInstance.h  JReactViewOptions.cpp  JSBundle.cpp  JSBundle_Android.cpp  JSHeadlessRuntime.h  JSHeadlessRuntimeImpl.cpp  JSHeadlessRuntimeImpl.h  MsoUtils.h  OfficeAssetApi.cpp  OnLoad.cpp  PlatformJSBundles_android.cpp  ReactHost.cpp  ReactInstanceAndroid.cpp  (+5 more)
reacthost/src/main/cpp/ReactNativeHost/: React.h  React_Android.h
reacthost/src/main/cpp/jshostofficepal/: PlatformJSBundles.h
reactreka/src/main/cpp/: CMakeLists.txt  JRekaBridgeOptions.cpp  JRekaBridgeOptions.h  OnLoad.cpp  ReactContextHolder.h  ReactNativeRekaBridge.cpp  ReactNativeRekaBridge.h  RekaNativeModuleProxy.cpp  RekaNativeModuleProxy.h  precomp.h  sources
reka/src/main/cpp/: CMakeLists.txt  JsonReader.cpp  PropertyBag_internal.h  RekaContext.cpp  RekaContext.h  RekaContextProxy.cpp  RekaContextProxy.h  RekaErrorProvider.cpp  RekaInstance.cpp  RekaInstance.h  RekaQueueService.cpp  RekaQueueService.h  RekaReader.cpp  RekaServiceProviderRegistration.cpp  RekaServiceRegistration.cpp  StringConversion.cpp  StringConversion.h  precomp.h
reka/src/main/cpp/Variant/: CallbackSignature.h  ReturnType.h
reka/src/main/cpp/reka/: DataTypes.h  JsonWriter.h  Reka.h  RekaErrorProvider.h  RekaReader.h
rnx-host/src/main/cpp/: CMakeLists.txt  JExecutorObserver.cpp  JExecutorObserver.h  JJSBundle.cpp  JJSBundle.h  JOfficeExecutorObserver.cpp  JOfficeExecutorObserver.h  JSBundle.h  OfficeExecutor.cpp  OfficeExecutor.h  OfficeExecutorFactory.cpp  OfficeExecutorFactory.h  OnLoad.cpp  ReactNativeHeaders.h  WrapperJSExecutor.cpp  WrapperJSExecutor.h  WrapperJSExecutorFactory.cpp  WrapperJSExecutorFactory.h
rnx-host/src/main/cpp/msoFolly/: msoFolly.h
sdxruntime/src/main/cpp/: AssetJSBundle_Android.cpp  BundleServerJSBundle.cpp  CMakeLists.txt  IReactInstanceInternal.h  InstanceFactory.h  MsoUtils.cpp  PlatformJSBundles_shared.h  ReactHost.cpp  ReactHost.h  ReactHostStatics.cpp  ReactInstanceAndroid.cpp  ReactInstanceAndroidDeferred.cpp  ReactInstanceAndroidDeferred.h  cppMacros.h
sdxruntime/src/main/cpp/ReactNativeHost/: React.h
sdxruntime/src/main/cpp/stlextensions/: algorithms.h
(+213 files in other folders)
